--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
 /* General body styling */
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background-color: #ffffff;
-    color: #333;
-}
 
 /* Header styling */
 h1 {
@@ -15,9 +9,36 @@ h1 {
     margin-bottom: 30px;
 }
 
+h2 {
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    color: #c83333;
+    margin: 30px;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  color: #333;
+  line-height: 1.6;
+  margin: 20px;
+}
+
+th {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: #000000;
+    margin: 220px;
+    text-align: left;
+    vertical-align: top;
+    height: 60px;
+}
+
 /* Styling for a specific class */
 .input {
-    width: 600px;
+    width: 100%;
     max-width: 960px;
     margin: 0 auto;
     padding: 16px;
@@ -26,16 +47,80 @@ h1 {
     border: 1px solid rgb(173, 173, 173);
 }
 
-.container {
+.input-small {
+    background-color: #ffffff;
+    border-radius: 1px;
+    border: 1px solid #d9d9d9;
+    border-top: 1px solid #c0c0c0;
+    font-size: 13px;
+    height: 25px;
+    padding: 1px 8px;
+    width: 100%;
     max-width: 960px;
     margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.logo {
+    width: 300px; 
+    height: auto;
+}
+
+.logo-small {
+    width: 80px; 
+    height: auto;
+}
+
+.table {
+    width: 100%;
+    padding: 30px;
+  }
+
+.table-row {
+    margin: 60px;
+    height: 40px; /* controls row height */
+    padding: 10px; /* optional */
+    vertical-align: middle; /* or top / bottom */
+}
+
+.table-column {
+    padding: 50px;
+    width: 100%;
+    height: 20px;
+    margin: 50px;
+}
+
+.container {
+    max-width: 960px;
+    margin: 50px;
+    margin-top: 20px;
+    padding: 100px;
+    padding-top: 10px;
+    text-align: center; 
+    gap: 50px;
+}
+
+  .container-left {
+    width: 200px; /* fixed width */
+  }
+
+.container-right {
+    display: flex; 
+    justify-content: flex-end; 
+    gap: 10px;
+}
+
+.divider {
+    border: none;
+    border-top: 1px solid #dadada;
+    margin: 20px 0;
 }
 
 .button {
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    color: #333;
+    text-decoration: none;
     margin: 0 auto;
     padding: 8px;
     background-color: #F8F9FA;
@@ -51,18 +136,4 @@ h1 {
     border-radius: 4px;
     border: 1px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.red { color: #EA4336; }
-.orange { color: #FABD05; }
-.green { color: #34A853; }
-.blue { color: #4285F4; }
-
-.noto-sans-<uniquifier> {
-  font-family: "Noto Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
 }
