--- a/style.css
+++ b/style.css
@@ -36,11 +36,10 @@ th {
     height: 60px;
 }
 
-/* Styling for a specific class */
 .input {
     width: 100%;
     max-width: 960px;
-    margin: 0 auto;
+    margin: 10 auto;
     padding: 16px;
     background-color: #ffffff;
     border-radius: 32px;
@@ -72,14 +71,13 @@ th {
 
 .table {
     width: 100%;
-    padding: 30px;
   }
 
 .table-row {
     margin: 60px;
-    height: 40px; /* controls row height */
-    padding: 10px; /* optional */
-    vertical-align: middle; /* or top / bottom */
+    height: 40px;
+    padding: 10px;
+    vertical-align: middle;
 }
 
 .table-column {
@@ -89,10 +87,17 @@ th {
     margin: 50px;
 }
 
+.container-top {
+    display: block;
+    text-align: right; 
+    gap: 10px;
+}
+
 .container {
     max-width: 960px;
     margin: 50px;
     margin-top: 20px;
+    margin-bottom: 100px;
     padding: 100px;
     padding-top: 10px;
     text-align: center; 
@@ -100,13 +105,17 @@ th {
 }
 
   .container-left {
-    width: 200px; /* fixed width */
+    width: 180px; /* fixed width */
   }
 
 .container-right {
     display: flex; 
     justify-content: flex-end; 
     gap: 10px;
+}
+
+.container-button {
+    margin-top: 10px;
 }
 
 .divider {
@@ -116,6 +125,7 @@ th {
 }
 
 .button {
+    display: inline-block;
     font-family: Arial, sans-serif;
     font-size: 14px;
     font-weight: normal;
@@ -124,6 +134,21 @@ th {
     margin: 0 auto;
     padding: 8px;
     background-color: #F8F9FA;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.button-secondary {
+    display: inline-block;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    color: #ffffff;
+    text-decoration: none;
+    margin: 0 auto;
+    padding: 8px;
+    background-color: #267cfe;
     border-radius: 4px;
     border: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
